--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
  <div id="syoukai">
      <div class="写真">
-   <img class="zibun" src="IMG_1706.jpeg">
+   <img class="zibun" src="https://github.com/rikuunnn/rikunn.github.io/blob/master/IMG_1706.jpeg?raw=true">
      </div>
 
      <div class="bun" >
