--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <a href="contact">  <li>お問い合わせ</li></a>
       </ul>
     </div>
-
+　　    <a href="#" class="menu-icon">
+    <span class="fa fa-bars"></span></a>
   </header>
 
 <main>
