--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="stlyesheet.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
   <header>
