--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="stlyesheet.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-   
+
   </head>
   <body>
   <header>
@@ -19,8 +19,7 @@
     <a href="contact">  <li>お問い合わせ</li></a>
       </ul>
     </div>
-　　    <a href="#" class="menu-icon">
-    <span class="fa fa-bars"></span></a>
+  
   </header>
 
 <main>
@@ -28,12 +27,18 @@
   <div class="content">
     <h2 class="name">鈴木大陸</h2>
     <h2>関西大学政策創造学部国際アジア法政策学科</h2>
-  
+    <a href="https://www.instagram.com/https://www.instagram.com/riku3451/?hl=ja?ref=badge" class="insta_btn">
+
+      <span class="insta">
+        <i class="fab fa-instagram"></i>
+      </span >
+
+    </a>
 
   </div>
  <div id="syoukai">
      <div class="写真">
-   <img class="zibun" src="https://github.com/rikuunnn/rikunn.github.io/blob/master/IMG_1706.jpeg?raw=true">
+   <img class="zibun" src="IMG_1706.jpeg">
      </div>
 
      <div class="bun" >
